force-app/main/default/objects/Company_Settings__c/Company_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Company Settings</label>
</CustomObject>