force-app/main/default/objects/Company_Settings__c/fields/Logo_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Document_Id__c</fullName>
    <label>Logo Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>